# wand-spellcaster

./: .gitignore  LICENSE  README.md  appletv_device.py  camera.py  color_profile.json.example  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
spellcaster/: README.md  appletv_credentials.example.json  appletv_device.py  async_device.py  calibrate.py  camera.py  config.py  dollar.py  effects.py  hud.py  kasa_device.py  main.py  pyproject.toml  requirements.txt  spellbook.py  tracker.py
spellcaster/tests/: capture_samples.py  debug_tracker.py  pair_appletv.py  relay_test.py  test_effects.py
src/spellcaster/: __init__.py  appletv_device.py  camera.py  config.py  effects.py  hud.py  kasa_device.py  main.py  spellbook.py  tracker.py
tests/: capture_samples.py  debug_tracker.py  pair_appletv.py  relay_test.py  test_effects.py
