# Tooling config for the wand-spellcaster project.
#
#   uv run ruff check .   # lint
#   uv run ruff format .  # (optional) auto-format
#   uv run ty check .     # type-check
#
# Docstrings use a custom Parameters:/Returns: format with the summary on the
# second line (pydocstyle D213). Other "D" rules stay off — they'd flag the
# house bullet style.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spellcaster"
version = "0.1.0"
description = "Camera wand-tracking spell-casting station (Raspberry Pi / laptop)."
# The codebase uses PEP 604 unions (str | None) and builtin generics
# (list[...]), which require Python 3.10+.
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "python-kasa>=0.5",
    "pyatv>=0.14",
]

[project.scripts]
spellcaster = "spellcaster.main:main"

# gpiozero + picamera2 are intentionally NOT dependencies: on the Pi they're
# system packages (apt install python3-picamera2; gpiozero ships with Pi OS),
# and picamera2's python-prctl dep only builds on Linux — listing them breaks
# `uv sync` on a Mac/Windows dev box. Dev tools live in [dependency-groups].

[tool.ruff]
line-length = 120
indent-width = 4
target-version = 'py313'
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.format]
docstring-code-format = true    # Format code blocks in docstrings
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'
docstring-code-line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear.
select = ['E', 'F', 'I', 'UP', 'B', 'A', 'C4', 'TID', 'NPY', 'RUF']
extend-select = ['D213']
ignore = [
    "E501",   # line length is handled by the formatter, not enforced hard
    "E741",   # allow short names like l/s/v that match the domain (HSV, etc.)
]
fixable = ['ALL']
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Diagnostic scripts run module-level code, and pair_appletv imports inside its
# __main__ block, so not all imports sit at the very top of the file.
"tests/*.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# OpenCV/NumPy ship strict, frequently-inaccurate type stubs; their overload
# errors are false positives on correct ndarray calls.
no-matching-overload = "ignore"
# gpiozero + picamera2 are Pi-only and intentionally not installed off-Pi
# (they are lazy-imported inside try/except).
unresolved-import = "ignore"

[tool.hatch.build.targets.wheel]
packages = ["src/spellcaster"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.54",
]
