# Tooling config for the spellcaster package.
#
#   uv run ruff check .   # lint
#   uv run ruff format .  # (optional) auto-format
#   uv run ty check .     # type-check
#
# Docstrings use a custom Parameters:/Returns: format with the summary on the
# second line (pydocstyle D213). Other "D" rules stay off — they'd flag the
# house bullet style.

[project]
name = "spellcaster"
version = "0.1.0"
description = "Camera wand-tracking spell-casting station (Raspberry Pi / laptop)."
# The codebase uses PEP 604 unions (str | None) and builtin generics
# (list[...]), which require Python 3.10+.
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "python-kasa>=0.5",
    "pyatv>=0.14",
]

# gpiozero + picamera2 are intentionally NOT dependencies: on the Pi they're
# system packages (apt install python3-picamera2; gpiozero ships with Pi OS),
# and picamera2's python-prctl dep only builds on Linux — listing them breaks
# `uv sync` on a Mac/Windows dev box. Dev tools live in [dependency-groups].

[tool.ruff]
line-length = 120
indent-width = 4
target-version = 'py313'
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.format]
docstring-code-format = true    # Format code blocks in docstrings
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'
docstring-code-line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear.
select = ['E', 'F', 'I', 'UP', 'B', 'A', 'C4', 'TID', 'NPY', 'RUF']
extend-select = ['D213']
ignore = [
    "E501",   # line length is handled by the formatter, not enforced hard
    "E741",   # allow short names like l/s/v that match the domain (HSV, etc.)
]
fixable = ['ALL']
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test/diagnostic scripts intentionally run module-level code after a sys.path
# shim, so imports aren't all at the top of the file.
"tests/*.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# OpenCV/NumPy ship strict, frequently-inaccurate type stubs; their overload
# errors are false positives on correct ndarray calls.
no-matching-overload = "ignore"
# gpiozero + picamera2 are Pi-only and intentionally not installed off-Pi
# (they are lazy-imported inside try/except).
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.54",
]
